--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -25,26 +25,26 @@
 				</td>
 				<td>
 					{{#if @root.courseId.gradeSystem}}
-						{{#ifvalue submission.grade value=0 }} 6{{/ifvalue}}
+						{{#ifeq submission.grade 0 }} 6{{/ifeqt}}
 						{{#if submission.grade}}
-								{{#ifvalue submission.grade value=1 }}5-{{/ifvalue}}
-								{{#ifvalue submission.grade value=2 }} 5{{/ifvalue}}
-								{{#ifvalue submission.grade value=3 }}5+{{/ifvalue}}
-								{{#ifvalue submission.grade value=4 }}4-{{/ifvalue}}
-								{{#ifvalue submission.grade value=5 }} 4{{/ifvalue}}
-								{{#ifvalue submission.grade value=6 }}4+{{/ifvalue}}
-								{{#ifvalue submission.grade value=7 }}3-{{/ifvalue}}
-								{{#ifvalue submission.grade value=8 }} 3{{/ifvalue}}
-								{{#ifvalue submission.grade value=9 }}3+{{/ifvalue}}
-								{{#ifvalue submission.grade value=10}}2-{{/ifvalue}}
-								{{#ifvalue submission.grade value=11}} 2{{/ifvalue}}
-								{{#ifvalue submission.grade value=12}}2+{{/ifvalue}}
-								{{#ifvalue submission.grade value=13}}1-{{/ifvalue}}
-								{{#ifvalue submission.grade value=14}} 1{{/ifvalue}}
-								{{#ifvalue submission.grade value=15}}1+{{/ifvalue}}
+								{{#ifeq submission.grade 1 }}5-{{/ifeqt}}
+								{{#ifeq submission.grade 2 }} 5{{/ifeqt}}
+								{{#ifeq submission.grade 3 }}5+{{/ifeqt}}
+								{{#ifeq submission.grade 4 }}4-{{/ifeqt}}
+								{{#ifeq submission.grade 5 }} 4{{/ifeqt}}
+								{{#ifeq submission.grade 6 }}4+{{/ifeqt}}
+								{{#ifeq submission.grade 7 }}3-{{/ifeqt}}
+								{{#ifeq submission.grade 8 }} 3{{/ifeqt}}
+								{{#ifeq submission.grade 9 }}3+{{/ifeqt}}
+								{{#ifeq submission.grade 10}}2-{{/ifeqt}}
+								{{#ifeq submission.grade 11}} 2{{/ifeqt}}
+								{{#ifeq submission.grade 12}}2+{{/ifeqt}}
+								{{#ifeq submission.grade 13}}1-{{/ifeqt}}
+								{{#ifeq submission.grade 14}} 1{{/ifeqt}}
+								{{#ifeq submission.grade 15}}1+{{/ifeqt}}
 						{{/if}}
 					{{else}}
-						{{#ifvalue submission.grade value=0}}0 Punkte{{/ifvalue}}
+						{{#ifeq submission.grade 0}}0 Punkte{{/ifeqt}}
 						{{#if submission.grade}}{{submission.grade}} Punkte{{/if}}
 					{{/if}}
 					</td>
