--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -3,13 +3,13 @@
         <div class="description">
             {{{this.description}}}
         </div>
-        {{#ifeqt teacherId currentUser._id}}
+        {{#ifvalue teacherId value=currentUser._id}}
             <a class="btn btn-primary btn-edit" href="/homework/{{_id}}/json">Bearbeiten</a>
             <form action="/homework/{{_id}}" method="post" class="inline">
                 <input type="hidden" name="_method" value="delete"/>
                 <button type="submit" class="btn btn-primary btn-submit">Löschen</button>
             </form>
-        {{/ifeqt}}
+        {{/ifvalue}}
     </div>
 	{{#embed "lib/components/modal-form" method="patch" class="edit-modal"}}
 		{{#content "fields"}}
