mobile style fix

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -42,6 +42,10 @@ aside.nav-sidebar {
             @include media-breakpoint-down(md) {
                 display: none;
             }
+
+            @include media-breakpoint-down(xs) {
+                display: inline-block;
+            }
         }
     }
 
