--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -146,6 +146,43 @@
                 background: #f9f9f9;
             }
 
+            .lightbox {
+                display: none;
+                position: fixed;
+                z-index: 999;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                top: 0;
+                left: 0;
+                background: rgba(0,0,0,0.8);
+                .link {
+                    color: white;
+                    font-size: 30px;
+                    position: absolute;
+                    margin-top: 30%;
+                }
+            }
+
+            .lightbox img {
+                max-width: 90%;
+                max-height: 90%;
+                margin-top: 2%;
+            }
+            .lightbox video {
+                max-width: 90%;
+                max-height: 90%;
+                margin-top: 2%;
+            }
+            .lightbox audio {
+                margin-top: 20%;
+            }
+
+            .lightbox:target {
+                outline: none;
+                display: block;
+            }
+
             .file-preview {
                 width: 90%;
                 height: 65px;
