add room to course times

--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -111,6 +111,7 @@
                     <th><label>Wochentag</label></th>
                     <th><label>Start der Schulstunde</label></th>
                     <th><label>Dauer der Schulstunde</label></th>
+                    <th><label>Raum</label></th>
                     </thead>
                     <tbody class="add-course-times">
                     <tr>
@@ -134,6 +135,10 @@
                         <td>
                             <input class="form-control new-duration" type="number"
                                    placeholder="in Minuten"/>
+                        </td>
+                        <td>
+                            <input class="form-control new-room" type="text"
+                                   placeholder="z.B. R-1.21"/>
                         </td>
                     </tr>
                     </tbody>
