--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -6,6 +6,7 @@
 @import "./fontawesome/font-awesome";
 @import "./chosen/bootstrap-chosen.scss";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
+@import "./toggle/bootstrap-toogle.min.css";
 
 /* customize bootstrap stuff in /bootstrap/scss/_custom.scss */
 
