--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="/styles/calendar/fullcalendar.min.css"/>
         <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
         <link rel="stylesheet" href="/styles/calendar/calendar.css"/>
+        <link rel="stylesheet" href="/styles/lib/toggle/bootstrap-toogle.min.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
