--- a/views/calendar/forms/form-create-event.hbs
+++ b/views/calendar/forms/form-create-event.hbs
@@ -28,14 +28,13 @@
     <div class="checkbox disabled">
         <label>
             Für Kurs anlegen?
-            <input name="isCourseEvent" type="checkbox" data-toggle="toggle">
+            <input name="isCourseEvent" type="checkbox" data-toggle="toggle" data-on="Ja" data-off="Nein">
         </label>
     </div>
     <div id="collapse" class="panel-collapse collapse">
         <div class="form-group">
-            <label for="courseId">Wählen Sie einen Kurs</label>
             <select class="course-selection form-control" name="courseId" required="required">
-                <option value="" selected hidden>Wähle...</option>
+                <option value="" selected hidden>Wähle einen Kurs...</option>
             </select>
         </div>
     </div>
