--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -9,8 +9,8 @@
                     $(this).parent('.usersubmission:not(.clicked)').toggleClass('active');
                     $('.usersubmission.clicked').removeClass('clicked');
 
-                    $('.usersubmission td:last-of-type i').removeClass('fa-times').addClass('fa-pencil-square-o');
-                    $('.usersubmission.active td:last-of-type i').removeClass('fa-pencil-square-o').addClass('fa-times');
+                    $('.usersubmission td:last-of-type i').removeClass('fa-chevron-down').addClass('fa-chevron-left');
+                    $('.usersubmission.active td:last-of-type i').removeClass('fa-chevron-left').addClass('fa-chevron-down');
                 });
 
                 // change tab
