--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -48,7 +48,7 @@
 						{{#if submission.grade}}{{submission.grade}} Punkte{{/if}}
 					{{/if}}
 					</td>
-				<td><i class="fa fa-pencil-square-o" aria-hidden="true"/></td>
+				<td><i class="fa fa-chevron-left" aria-hidden="true"/></td>
 			</tr>
 			<tr class="evaluation">
 				<td colSpan="6">{{>"homework/evaluation"}}</td>
