delete Modal in detail-view of homework

--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -63,6 +63,7 @@
             });
         });
     </script>
+    <script src="/scripts/lessons.js" type="text/javascript" defer></script>
 {{/content}}
 {{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/homework/assignment.css"/>
