--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -16,4 +16,17 @@
 			{{> "homework/form-assignment"}}
 		{{/content}}
 	{{/embed}}
+    {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+        {{#content "body"}}
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-close">
+                    Abbrechen
+                </button>
+
+                <button type="submit" class="btn btn-primary btn-submit">
+                    Löschen
+                </button>
+            </div>
+        {{/content}}
+    {{/embed}}
 </section>
