--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -5,10 +5,14 @@
         </div>
         {{#ifvalue teacherId value=currentUser._id}}
             <a class="btn btn-primary btn-edit" href="/homework/{{_id}}/json">Bearbeiten</a>
-            <form action="/homework/{{_id}}" method="post" class="inline">
-                <input type="hidden" name="_method" value="delete"/>
-                <button type="submit" class="btn btn-primary btn-submit">Löschen</button>
-            </form>
+            <a class="btn btn-primary btn-delete" 
+                href="/homework/{{_id}}"
+                redirect="/homework"
+                target="_blank" 
+                data-method="delete-material" 
+                data-name="{{title}}">
+                Löschen
+            </a>
         {{/ifvalue}}
     </div>
 	{{#embed "lib/components/modal-form" method="patch" class="edit-modal"}}
