Beschreibungen haben x-overflow & code change of tabs

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -118,6 +118,7 @@
         margin: 10px 0;
         min-height: 75px;
         color: grey;
+        word-break: break-all;
         @include media-breakpoint-down(xs) {
           margin-right: 25px;
         }
