--- a/static/styles/homework/assignment.scss
+++ b/static/styles/homework/assignment.scss
@@ -11,6 +11,10 @@
     margin: 0;
     color: grey;
     text-align: right;
+    @include media-breakpoint-down(xs) {
+      width:100%;
+      padding: 0 0 10px;
+    }
   }
 
   .edit {
@@ -30,19 +34,20 @@
     display: inline-block;
     text-decoration: none;
     padding: 5px 10px 0;
-    margin-top: 1.5rem;
+    font-size: 1.1rem;
+    @include media-breakpoint-up(sm) {
+      font-size: 1.2rem;
+      margin-top: 1.5rem;
+    }
     margin-bottom: -2px;
-    border-bottom: 2px solid transparent;
+    border: 2px solid transparent;
+    border-top-left-radius:5px;
+    border-top-right-radius:5px;
     &.active {
       font-weight: 700;
       color: $colorHPIRed !important;
-      border: 2px solid $colorHPIRed;;
-      border-top-left-radius:5px;
-      border-top-right-radius:5px;
-      border-bottom:2px solid #fff;
-    }
-    @include media-breakpoint-up(sm) {
-      font-size: 1.2rem;
+      border-color: $colorHPIRed;
+      border-bottom-color: #fff;
     }
   }
   .tab-content {
@@ -67,6 +72,7 @@
       color: grey;
       max-width:700px;
       margin: .5rem 0;
+      word-break: break-all;
       &.htmleditor{
         max-width:100%;
       }
