--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -136,7 +136,7 @@
         }
 
         .card.file {
-            min-height: 120px;
+            min-height: 80px;
             color: $colorHPIRed;
             text-overflow: ellipsis;
             overflow:hidden;
@@ -192,10 +192,20 @@
             }
 
             .fa {
+                margin-top: 20px;
                 margin-right: 15px;
                 color: #ccc;
                 &:hover {
                     cursor: pointer;
+                }
+            }
+            .title {
+                position: absolute;
+                white-space: nowrap;
+            }
+            .file-preview {
+                @media screen and (max-width: 575px) {
+                    display: none;
                 }
             }
         }
