--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -47,6 +47,18 @@
 
             <section class="directories">
                 <div class="row">
+                    {{#if canCreateDir}}
+                        <div class="col-sm-6 col-xs-12 col-md-4">
+                            <div data-toggle="modal">
+                                <div class="card card-block folder create-directory">
+                                    <strong class="card-title-directory">
+                                        <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
+                                    </strong>
+                                </div>
+                            </div>
+                        </div>
+                    {{/if}}
+
                     {{#each directories}}
 						<div class="col-sm-6 col-xs-12 col-md-4">
 							<div class="card card-block folder" onclick="location.href='{{this.url}}';">
@@ -63,18 +75,6 @@
 							</div>
 						</div>
                     {{/each}}
-
-                    {{#if canCreateDir}}
-                        <div class="col-sm-6 col-xs-12 col-md-4">
-                            <div data-toggle="modal">
-                                <div class="card card-block folder create-directory">
-                                    <strong class="card-title-directory">
-                                        <i class="fa fa-folder" aria-hidden="true"></i> Neuen Ordner erstellen ...
-                                    </strong>
-                                </div>
-                            </div>
-                        </div>
-                    {{/if}}
                 </div>
             </section>
 
@@ -86,22 +86,26 @@
                                 onMouseOver="document.getElementById('{{this.name}}').innerHTML = writeFileSizePretty({{this.size}})"
                                 onMouseOut= "document.getElementById('{{this.name}}').innerHTML = ''">
                                 <div class="openFile">
-                                    <a href="#_" class="lightbox" id="view{{this.name}}" onclick="document.getElementById('view{{this.name}}').innerHTML = ''">
-                                    </a>
-                                    <div class="card-block">
+                                    <a href="#_" class="lightbox" id="view{{this.name}}" onclick="document.getElementById('view{{this.name}}').innerHTML = ''"></a>
+                                    <div class="card-block"
+                                         onclick="location.href='#view{{this.name}}';
+                                                 document.getElementById('view{{this.name}}').innerHTML = fileViewer('{{this.type}}', '{{this.file}}');">
                                         <div class="card-title">
                                             <div class="col-sm-3 no-padding">
                                                 <div class="file-preview"
                                                      style="background-image: url({{this.thumbnail}})"></div>
                                             </div>
-                                            <a class="title" href="#view{{this.name}}"
-                                               onclick="document.getElementById('view{{this.name}}').innerHTML = fileViewer('{{this.type}}', '{{this.file}}') ">
+                                            <a class="title">
                                                 {{this.name}}
                                             </a>
                                         </div>
                                         <div class="card-text">
-                                            <a href="/files/file?download=1&file={{this.file}}" target="_blank"><i
-                                                    class="fa fa-cloud-download"></i></a>
+
+                                            <a href="/files/file?download=1&file={{this.file}}"
+                                               target="_blank"
+                                               data-method="download">
+                                                <i class="fa fa-cloud-download"></i>
+                                            </a>
 
                                             <!--<form action="/files/file/" method="post" class="inline">
                                                 <input type="hidden" name="_method" value="delete" />
